--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,4 @@
+SetEnv WEBSITE_NAME "EXAMPLE"
 SetEnv HOMELINK "http://localhost/dashboard/phpLearning/src/page/WEB_FOR_LAY/index.php"
 SetEnv DB_TABLE "example"
 SetEnv DB_USERNAME "root"
